# Note-project

./: .gitignore  CMakeLists.txt  Collection.cpp  Collection.h  Note.cpp  Note.h  Observer.cpp  Observer.h  main.cpp
Note-project-master/: CMakeLists.txt  Collection.cpp  Collection.h  ConcreteObserver.cpp  ConcreteObserver.h  Note.cpp  Note.h  Observer.h  Subject.h  main.cpp
Note-project-master/test/: CollectionTest.cpp  NoteTest.cpp  ObserverTest.cpp  runAllTests.cpp
test/: CollectionTest.cpp  NoteTest.cpp  runAllTests.cpp
